Fixes popup layout on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -574,6 +574,32 @@ input[type="checkbox"].toggle:focus + label::before {
         color: red;
         position: relative;
     }
+
+    h2 {
+        font-size: 2rem;
+    }
+
+    p {
+        line-height: 1.5rem;
+        font-size: 1rem;
+        margin-top: 1.5rem;
+    }
+
+    .popup-container {
+        width: 90%;
+        margin-bottom: 10rem;
+    }
+
+    .how-to-play-div,
+    .sfx-controls-div,
+    .high-score-div {
+        width: 80%;
+    }
+
+    .close-popup {
+        margin-top: 1.5rem;
+        width: 2rem;
+    }
 }
 
 /* @media (min-width: 600px) {
